# shore-gui

./: .gitignore  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  release-plz.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  package.yml  release-plz.yml
contrib/: PKGBUILD  shore.desktop
mockups/: chapbook.html  chat.html  connect.html  fonts.html  grimoire.html  shoreline.html  static.html  terminal.html
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_linux.rs
src/components/: AltPicker.tsx  Avatar.tsx  CharacterPicker.tsx  CodeBlock.tsx  CommandPalette.tsx  CompactDialog.tsx  Composer.tsx  EditDiff.tsx  FullscreenImageViewer.tsx  ImageGallery.tsx  InjectSystem.tsx  JsonTree.tsx  LinkPreview.tsx  MarkdownBody.tsx  MemorySearch.tsx  Message.tsx  MessageContextMenu.tsx  ModelPicker.tsx  NoticeToast.tsx  NoticesPanel.tsx  Preferences.tsx  SamplerSettings.tsx  SearchBar.tsx  SettingsMenu.tsx  Sigil.tsx  StatusBar.tsx  TimeGap.tsx  Timeline.tsx  Titlebar.tsx  TokenDashboard.tsx  UiSettingsEffects.tsx
src/demo/: README.md  fixtures.ts  index.ts  tauriShim.ts
src/hooks/: useClearMarker.ts  useCommandResult.ts  useDaemon.ts  useGlobalHotkey.ts  useImageGallery.ts  useNotifications.ts  useUiSettings.ts  useViewSettings.ts
src/lib/: commands.ts  cost.ts  diff.ts  dnd.ts  messages.ts  notices.ts  sampler.ts  search.ts  speech.ts  windows.ts
(+14 files in other folders)
